# mmdb-server

./: .env.geoip-updater.dist  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  openapi.yaml  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  changelog-config.json
.github/workflows/: ci.yml  prepare-release.yml  publish-release.yml  release.yml  security.yml
etc/: server.conf.docker  server.conf.sample
mmdb_server/: mmdb_server.py
scripts/: release.sh
tools/: read-csv.py
